# python-htd

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
htd/: __init__.py  constants.py  utils.py
htd_client/: __init__.py  base_client.py  constants.py  lync_client.py  mca_client.py  models.py  utils.py
tests/: realtest.py  test_base_client_additional.py  test_base_client_coverage.py  test_base_client_edge_cases.py  test_base_client_gap_coverage.py  test_bass_treble.py  test_client.py  test_init.py  test_lync_client_coverage.py  test_lync_options_coverage.py  test_mca_bass_treble_set.py  test_mca_client_coverage.py  test_mca_options_coverage.py  test_model.py  test_models_coverage.py  test_utils.py  test_utils_coverage.py  test_utils_coverage_gap.py
utils/: realtest.py
